--- a/ITZWebClientApp/Pages/ExtendedInfo/NAICM.razor
+++ b/ITZWebClientApp/Pages/ExtendedInfo/NAICM.razor
@@ -51,8 +51,8 @@
     <p>
         Este proyecto tenía un gran reto desde el punto de vista técnico del software utilizado que era Revit, debido a que se necesitaban que el modelo tuviera los despieces adecuados y su correcta enumeración. A pesar de que las parillas geométricamente son ortogonales, el número de despieces que se generan al llegar a sus bordes se disparan provocando que se generen despieces varilla por varilla. El trabajo todavía incrementa de forma muy significativa si existiese algún cambio geométrico en la longitud de despiece o la ubicación de sus arranques, ya que provocaría que todas losas que estuviesen juntas sobre un mismo nivel estuvieran mal provocando que el proceso se vuelva a repetir prácticamente desde cero.
     </p>
-
-    <video class="showControlsOnHover" controls name="media" preload="metadata" muted>
+    <h1>hehhehec</h1>
+    <video class="showControlsOnHover" name="media" preload="metadata" controls="controls" autoplay="autoplay">
         <source src="https://www.dropbox.com/s/0n8l6f129kwavpw/NAICM_PrimerosPlanos.mp4?raw=1" type="audio/mp4" /> />
     </video>
 
@@ -87,7 +87,7 @@
                 <li>
                     <b>Consecutivo.</b> El consecutivo individual por varilla o miembro dentro de un mismo grupo de un extremo al otro.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" name="media" controls="controls" autoplay="autoplay">
                             <source src="https://www.dropbox.com/s/jy1a5lqnf8zxc4w/NAICM_Apps.mp4?raw=1" type="audio/mp4" /> />
                         </video>
                     </div>
@@ -108,7 +108,7 @@
                 <li>
                     <b>Rotulación de Referencia de planos en cuadro de datos</b>
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" name="media" controls autoplay>
                             <source src="https://www.dropbox.com/s/89eadflrz8yzlc7/NAICM_Demo.mp4?raw=1" type="audio/mp4" preload="metadata" muted /> />
                         </video>
                     </div>
@@ -121,7 +121,7 @@
                 <li>
                     Cortado de varilla con traslape incluido.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" name="media" controls autoplay>
                             <source src="https://www.dropbox.com/s/hrdu7alkvp45kid/NAICM_Apps%20ARTranslape.mp4?raw=1" type="audio/mp4" preload="metadata" muted /> />
                         </video>
                     </div>
@@ -129,7 +129,7 @@
                 <li>
                     Pre colocación de bastones.
                     <div>
-                        <video class="showControlsOnHover" name="media">
+                        <video class="showControlsOnHover" name="media" controls autoplay>
                             <source src="https://www.dropbox.com/s/cqb2ymv90mlhawq/NAICM_Apps%20Bastones.mp4?raw=1" type="audio/mp4" preload="metadata" muted/> />
                         </video>
                     </div>
