--- a/ITZWebClientApp/Components/Forge/ForgeViewer.razor
+++ b/ITZWebClientApp/Components/Forge/ForgeViewer.razor
@@ -1,9 +1,10 @@
 ﻿@using ForgeLibs
 @using ForgeLibs.Models.Forge
 @using Pages
+@using ITZWebClientApp.Interop;
 @using ITZWebClientApp.Infraestructure.Data;
 
-@inject IJSRuntime JSRuntime
+@inject IJSRuntime js
 @inject HttpClient http;
 @inject IItzRepository repo;
 
@@ -58,9 +59,14 @@
         {
             //Console.WriteLine("token : " + AccessToken);
             //Console.WriteLine("urn64 : " + ProjectUrn64);
-            Interop.ForgeInterop forge = new Interop.ForgeInterop(JSRuntime);
-            await forge.LoadDocument(ViewerId, AccessToken, ProjectUrn64, this);
+
+            await ForgeInterop.LoadDocument(js, ViewerId, AccessToken, ProjectUrn64, this);
         }
+    }
+
+    public void Resize()
+    {
+        ForgeInterop.Resize(js, ViewerId);
     }
 
 
@@ -77,15 +83,14 @@
     [JSInvokable]
     public void IsolateElements(int[] ids)
     {
-        Console.WriteLine($"ForgeViewer.IsolateElements()");
-        Interop.ForgeInterop forge = new Interop.ForgeInterop(JSRuntime);
-        forge.IsolateElement(ViewerId, ids);
+        //Console.WriteLine($"ForgeViewer.IsolateElements()");
+        ForgeInterop.IsolateElement(js, ViewerId, ids);
     }
 
     [JSInvokable]
     public void OnViewerChangedSelection(int[] ids)
     {
-        Console.WriteLine("ForgeViewer.OnViewerChangedSelection()");
+        //Console.WriteLine("ForgeViewer.OnViewerChangedSelection()");
         OnChangeSelection.InvokeAsync(ids);
     }
 
@@ -97,17 +102,31 @@
         shouldRedner = false;
     }
 
-    [JSInvokable]
-    public static void OnLoadSuccess()
-    {
-        Console.WriteLine("SUPER SUCCESS");
-    }
+    //[JSInvokable]
+    //public static void OnLoadSuccess()
+    //{
+    //    Console.WriteLine("SUPER SUCCESS");
+    //}
 
 
     public void ChangeColorElements(int[] ids, string rgbString)
     {
-        Console.WriteLine($"ForgeViewer.ChangeColorElements()");
-        Interop.ForgeInterop forge = new Interop.ForgeInterop(JSRuntime);
-        forge.ChangeColorElement(ViewerId, ids, rgbString);
+        //Console.WriteLine($"ForgeViewer.ChangeColorElements()");
+        ForgeInterop.ChangeColorElement(js, ViewerId, ids, rgbString);
+    }
+
+    public void ResetOverrideColors()
+    {
+        ForgeInterop.ResetOverrideColors(js, ViewerId);
+    }
+
+    public void ShowAll()
+    {
+        ForgeInterop.ShowAll(js, ViewerId);
+    }
+
+    public void FitToView(int[] ids = null)
+    {
+        ForgeInterop.FitToView(js, ViewerId, ids);
     }
 }
