--- a/ITZWebClientApp/Pages/CV.razor
+++ b/ITZWebClientApp/Pages/CV.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
-
 @page "/cv"
+
+@using ITZWebClientApp.Components.Charts;
 
 <style>
     .card {
@@ -9,24 +10,28 @@
 </style>
 
 <main class="container">
-    <h1>Experiencia de Trabajo</h1>
+    <h1>Experiencia Laboral</h1>
+    <hr class="my-lg-4">
     <br />
     <div>
-        <h3>GIA (abril 2018 – noviembre 2018)</h3>
-        <h5>Cargo: <b>COORDINADOR BIM</b></h5>
+        <h3 class="@companyClass">GIA <small class="@dateClass">(abril 2018 – noviembre 2018)</small></h3>
+        <h5 class="@jobPostion"><b>COORDINADOR BIM</b></h5>
+        <br />
         <p>
             <b>Experiencia.</b> Coordinación para el proyecto de ingenierías de taller LOD 450 de losas de concreto del edificio terminal del NAICM zonas C3, D0, E1, E2, E3, E4 A1 y cimbras utilizando Revit. Definí la metodología de modelado y documentación, de todas las áreas del edificio terminal apegándome a los estándares definidos por el cliente. Coordine diversas empresas BIM para el desarrollo de las ingenierías.
         </p>
-        <p>Desarrolle diversas aplicaciones para automatizar le modelado de acero de refuerzo, documentación, etiquetado, inspección de modelos, etc.). <a href="projects/1801">mas información</a></p>
+        <p>Desarrolle diversas aplicaciones para automatizar el modelado de acero de refuerzo, documentación, etiquetado, inspección de modelos, etc.). <a href="projects/1801">mas información</a></p>
 
     </div>
+    <hr class="my-3">
     <br />
 
 
-
     <div>
-        <h3>Grupo Triada (2016 – abril 2018)</h3>
-        <h5>Cargo: <b>IMPLEMENTACIÓN BIM</b></h5>
+        <h3 class="@companyClass">Grupo Triada <small class="@dateClass">(2016 – abril 2018)</small></h3>
+        <h5 class="@jobPostion"><b>IMPLEMENTACIÓN BIM</b></h5>
+        <br />
+
         <p>
             <b>Experiencia:</b> Implementación en el área de Estructuras, donde he podido implementar con pocos recursos la metodología BIM, en las estructuras de puentes en los que el departamento me ha solicitado (aproximadamente 8 en 10 meses) para cuantificación y documentación.
         </p>
@@ -67,11 +72,14 @@
             </div>
         </div>
     </div>
+    <hr class="my-3">
     <br />
 
+
     <div>
-        <h3>ICA-BIM (2010 - 2016)</h3>
-        <h5> Ultimo Cargo: <b>COORDINADOR BIM</b></h5>
+        <h3 class="@companyClass">ICA-BIM <small class="@dateClass">(2010 - 2016)</small> </h3>
+        <h5 class="@jobPostion"><b>COORDINADOR BIM</b></h5>
+        <br />
 
         <p><b>Experiencia:</b> Realización de modelos BIM para varias obras que ejecuta ICA, empezando como <b>modelador BIM</b> colabore con el desarrollo de varios proyectos abarcando áreas de arquitectura, estructura e instalaciones, desarrollados con objetivos de promoción, licitación, control, avance, generadores, interferencias y manufactura.</p>
 
@@ -175,17 +183,23 @@
         </div>
 
     </div>
+    <hr class="my-3">
     <br />
 
+
     <div>
-        <h3>Freelance (2008-2009)</h3>
+        <h3 class="@companyClass"> Freelance <small class="@dateClass">(2008-2009)</small></h3>
         <p>Trabajos independientes como proyectos, planos y perspectivas con diversos clientes.</p>
     </div>
+    <hr class="my-3">
     <br />
 
+
     <div>
-        <h3>Aurobo Construcciones S.A. de C.V. (2004-2007)</h3>
-        <h5>Cargo: <b>PROYECTISTA.</b></h5>
+        <h3 class="@companyClass">Aurobo Construcciones <small class="@dateClass">(2004-2007)</small></h3>
+        <h5 class="@jobPostion"><b>PROYECTISTA.</b></h5>
+        <br />
+
         <p>
             <b>Experiencia:</b> Realice diversos proyectos, desde el anteproyecto hasta el proyecto ejecutivo, llevando en varias ocasiones los trámites de licencias, así como supervisión en obra, haciendo levantamientos, planos y perspectivas tridimensionales, cuantificaciones de materiales, etc.
         </p>
@@ -227,17 +241,24 @@
         </div>
 
     </div>
+    <hr class="my-3">
     <br />
 
+
     <div>
-        <h3>Grupo IPISA de México S.A. de C.V. (2003 - 2004)</h3>
-        <h5> Cargo: <b>DIBUJANTE</b></h5>
+        <h3 class="@companyClass">Grupo IPISA de México <small class="@dateClass">(2003 - 2004)</small></h3>
+        <h5 class="@jobPostion"> <b>DIBUJANTE</b></h5>
+        <br />
+
         <p><b>Experiencia:</b> Planos de instalaciones industriales y residenciales.</p>
     </div>
+    <hr class="my-3">
     <br />
 
 </main>
 
 @code {
-    string dateClass = "text-secondary font-weight-light";
+    string dateClass = "text-muted";
+    string companyClass = "text-dark";
+    string jobPostion = "text-secondary";
 }
